2004-01-04  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* src/totem-playlist.c:
	* src/totem.c: (on_recent_file_activate):
	When a file is clicked inside the recent-files, it's added at
	the end of the playlist and played straight away (Closes: #129581)
	Patch by Harsh Jaitly <hjaitly@novell.com>

2003-12-29  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: remove unused defines and includes
	* src/totem.c: (totem_action_error_and_exit),
	(video_widget_create), (main): make sure that we don't get an
	extra period in error messages
	* src/video-utils.c: remove unneeded stdint.h include (Closes: #129909)

2003-12-29  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* README: upd
	* src/totem-preferences.c: (totem_setup_preferences):
	When the media device doesn't exist, we should get it directly from
	the selection widget (fixes problems with disappearing devices)

2003-12-29  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_restore_pl):
	Set the logo path if we can't restore a playlist on startup

2003-12-23  Julien MOUTTE <julien@moutte.net>

	* configure.in: Switching to GStreamer 0.7.x and using
	gstreamer-interfaces package.
	* src/bacon-video-widget-gst.c: (bacon_video_widget_realized),
	(print_tag), (got_found_tag), (got_video_size),
	(bacon_video_widget_finalize), (bacon_video_widget_open),
	(bacon_video_widget_play), (bacon_video_widget_seek),
	(bacon_video_widget_stop), (bacon_video_widget_close),
	(bacon_video_widget_pause), (bacon_video_widget_can_set_volume),
	(bacon_video_widget_set_volume), (bacon_video_widget_get_volume),
	(bacon_video_widget_set_show_visuals),
	(bacon_video_widget_get_visuals_list),
	(bacon_video_widget_set_visuals), (bacon_video_widget_is_playing),
	(bacon_video_widget_new): Implement the newest libgstplay API.
	* src/gstvideowidget.c: (gst_video_widget_reorder_windows),
	(gst_video_widget_realize), (gst_video_widget_expose),
	(gst_video_widget_allocate), (gst_video_widget_set_property),