@@ -1,5 +1,10 @@
 2004-01-04  Bastien Nocera  <hadess@hadess.net>
 
+	* src/bacon-video-widget-xine.c: (bacon_video_widget_button_press):
+	Don't hide mouse button presses from GTK+ (Closes: #127586)
+
+2004-01-04  Bastien Nocera  <hadess@hadess.net>
+
 	* README: upd
 	* src/totem-playlist.c:
 	* src/totem.c: (on_recent_file_activate):
